--- a/style.css
+++ b/style.css
@@ -1,3 +1,51 @@
+@font-face {
+      font-family: "Lato";
+      src: url("assets/lato/Lato-Regular.ttf");
+    }
+
+@font-face {
+      font-family: "Maven Pro";
+      src: url("assets/maven-pro/MavenPro-Regular.ttf");
+    }
+
+@font-face {
+  font-family: "fontello";
+  src: url('assets/font/fontello.eot?71847581');
+  src: url('assets/font/fontello.eot?71847581#iefix') format('embedded-opentype'),
+       url('assets/font/fontello.woff2?71847581') format('woff2'),
+       url('assets/font/fontello.woff?71847581') format('woff'),
+       url('assets/font/fontello.ttf?71847581') format('truetype'),
+       url('assets/font/fontello.svg?71847581#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+i {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+  color: #33AB92;
+  font-size: 16px;
+  line-height: 24px;
+  display: inline-block;
+  text-decoration: none;
+}
+
+i:hover {
+  color: #fff;
+}
+
+.icon-location:before { content: '\e800'; } 
+.icon-phone:before { content: '\e801'; } 
+.icon-mail:before { content: '\e802'; } 
+.icon-twitter:before { content: '\f099'; } 
+.icon-facebook:before { content: '\f09a'; } 
+.icon-linkedin:before { content: '\f0e1'; }
+.icon-dribbble:before { content: '\f17d'; } 
+.icon-pinterest:before { content: '\f231'; } 
+.icon-gplus:before { content: '\f30f'; } 
+
 /* Base */
 
 html {
@@ -28,13 +76,13 @@ body {
   content: "";
   width: 0;
   height: 0;
-  border-top: #323232 solid 28px;
+  border-top: #323232 solid 25px;
   border-right: #ffffff solid 45px;
   border-left: #ffffff solid 45px;
   position: absolute;
   top: 100%;
   left: 50%;
-  margin-left: -45px;
+  margin-left: -48px;
 }
 
 .logo {
@@ -59,6 +107,7 @@ body {
   text-decoration: none;
   display: inline-block;
   margin: 0 10px 20px;
+  user-select: none;
 }
 
 .menu-item:hover,
@@ -113,8 +162,6 @@ body {
 .slide {
   overflow: hidden;
   visibility: hidden;
-  -webkit-transform: rotate(120deg);
-  -ms-transform: rotate(120deg);
   transform: rotate(120deg);
   width: 178px;
   height: 206px;
@@ -123,48 +170,39 @@ body {
   margin-right: 10px;
   margin-top: -38px;  
   transition: 0.5s ease-in-out;
-  -moz-transition: 0.5s ease-in-out;
-  -webkit-transition: 0.5s ease-in-out;
 }
 
 .slide:hover,
 .slide:active {
-  -webkit-transform: scale(1.05) rotate(120deg);
-  -ms-transform: scale(1.05) rotate(120deg);
   transform: scale(1.05) rotate(120deg); 
   transition: 0.5s ease-in-out;
-  -moz-transition: 0.5s ease-in-out;
-  -webkit-transition: 0.5s ease-in-out;
 }
 
 .slide-mask1 {
   overflow: hidden;
   width: 100%;
   height: 100%;
-  -webkit-transform: rotate(-60deg);
-  -ms-transform: rotate(-60deg);
   transform: rotate(-60deg);
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  transition: 0.5s ease-in-out;
-  -moz-transition: 0.5s ease-in-out;
-  -webkit-transition: 0.5s ease-in-out;
-  
 }
+
 .slide-mask2 {
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
   background-position: 50%;
+  background-size: cover;
   visibility: visible;
-  -webkit-transform: rotate(-60deg);
-  -ms-transform: rotate(-60deg);
   transform: rotate(-60deg);
   position: relative;
-  transition: 0.5s ease-in-out;
-  -moz-transition: 0.5s ease-in-out;
-  -webkit-transition: 0.5s ease-in-out;
 }
+
+@keyframes fade {
+  from {opacity: 0.5;}
+  to {opacity: 1; }
+}
+
+
 
 .slide-br-mask {
   display: none;
@@ -234,6 +272,7 @@ body {
   width: 7px;
   height: 6px;
   background-color: lightgray;
+  cursor: pointer;
 }
 
 .btn-active {
@@ -296,8 +335,6 @@ body {
 .about-myphoto {
   overflow: hidden;
   visibility: hidden;
-  -webkit-transform: rotate(120deg);
-  -ms-transform: rotate(120deg);
   transform: rotate(120deg);
   width: 180px;
   height: 206px;
@@ -309,10 +346,7 @@ body {
   overflow: hidden;
   width: 100%;
   height: 100%;
-  -webkit-transform: rotate(-60deg);
-  -ms-transform: rotate(-60deg);
   transform: rotate(-60deg);
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 
@@ -323,8 +357,6 @@ body {
   background-position: 50%;
   background-image: url(assets/myphoto.jpg);
   visibility: visible;
-  -webkit-transform: rotate(-60deg);
-  -ms-transform: rotate(-60deg);
   transform: rotate(-60deg);
 }
 
@@ -361,13 +393,12 @@ body {
 
 .about-social-button {
   width: 24px;
-  height: 24px;
+  height: 24px;  
+  text-align: center;
   display: inline-block;
   margin: 0;
   padding: 0;
   background-color: #a5dbd4;
-  background-image: url("assets/sprite.svg");
-  background-repeat: no-repeat; 
   border-right: 1px solid #74ccbf;
   border-bottom: 1px solid #65C2B0;
   border-top: 1px solid #65C2B0;
@@ -376,29 +407,17 @@ body {
 
 .about-social-button:hover,
 .about-social-button:active {
-  background-image: url("assets/sprite2.svg");
+  color: #fff;
   transition: 0.2s;
 }
 
-.about-social-button-fb {
-  background-position: -108px 3px;
-}
 .about-social-button-tw {
-  background-position: -188px 3px;
   background-color: #6CCCC0;
 }
 .about-social-button-gp {
-  background-position: -74px 3px;
   background-color: #7DD1C4;
 }
-.about-social-button-pin {
-  background-position: -302px 3px;
-}
-.about-social-button-lin {
-  background-position: -265px 3px;
-}
 .about-social-button-dr {
-  background-position: -226px 3px;
   background-color: #6BCCBB;
   border-right: none;
 }
@@ -447,7 +466,7 @@ body {
 
 .contact-form-container {
   display: inline-block;
-  width: 73%;
+  width: 75%;
   margin-right: 16px;
   vertical-align: top;
   font-size: 12px;
@@ -489,6 +508,18 @@ body {
   text-transform: uppercase;
   color: #d7fcf5;
   float: right;
+  transition: 0.5s ease-in-out;
+  text-decoration: none;
+  user-select: none;
+}
+
+.contact-form input[type="submit"]:hover,
+.contact-form input[type="submit"]:active {
+  transform: scale(1.05);
+  color: #fff;
+  font-weight: 700;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
 }
 
 .contact-form textarea {
@@ -503,7 +534,7 @@ body {
 
 .contact-text-container {
   display: inline-block;
-  width: 24%;
+  width: 22%;
   vertical-align: top;
   font-size: 12px;
 }
@@ -541,29 +572,16 @@ body {
   color: #bebebe;
 }
 
-.contact-addres:before,
-.contact-phone:before,
-.contact-email:before {
-  content: "";
+.contact-addres i,
+.contact-phone i,
+.contact-email i {
+  top: -5px;
   left: -5px;
+  text-align: center;
   position: absolute;
   width: 20px;
-  height: 20px;
+  height: 24px;
   display: block;
-  background-image: url("assets/sprite.svg");
-  background-repeat: no-repeat;
-}
-
-.contact-addres:before {   
-  background-position: -152px -1px;
-}
-
-.contact-phone:before {   
-  background-position: -38px -1px;
-}
-
-.contact-email:before {   
-  background-position: 0px -1px;
 }
 
 .contact-email a {
